--- a/landing page/index.html
+++ b/landing page/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio of Mayur Thakor showcasing web development projects completed during CodSoft internship.">
-    <link rel="icon" href="img/bantyimg01.jpg" type="image/png">
+    <link rel="icon" href="img/mayur.jpg" type="image/png">
 
     <title>Mayur Thakor | Web Development Intern Portfolio</title>
 
